# uPIMulator

./: .gitignore  LICENSE  README.md
assets/: figure5_mem_util_calculator.xlsx  figure7_active_tasklet_breakdown.xlsx  figure9_instruction_mix.xlsx
golang/: README.md
golang/uPIMulator/: go.mod  go.sum
golang/uPIMulator/benchmark/: CMakeLists.txt
golang/uPIMulator/benchmark/RED/dpu/: CMakeLists.txt
golang/uPIMulator/docker/: Dockerfile
golang/uPIMulator/script/: build.py  format.py  run_validation.sh  visualize.py
golang/uPIMulator/sdk/: CMakeLists.txt  build.py
golang/uPIMulator/src/: main.go
golang_vm/: README.md
golang_vm/uPIMulator/benchmark/: CMakeLists.txt  build.py
golang_vm/uPIMulator/benchmark/BS/baselines/gpu/: binary_search.cu  cpu_lib.py
golang_vm/uPIMulator/benchmark/BS/dpu/: CMakeLists.txt
golang_vm/uPIMulator/benchmark/BS/host/: app.c
golang_vm/uPIMulator/benchmark/GEMV/dpu/: CMakeLists.txt
golang_vm/uPIMulator/benchmark/GEMV/host/: app.c
golang_vm/uPIMulator/benchmark/HST-L/: Makefile
golang_vm/uPIMulator/benchmark/HST-L/dpu/: CMakeLists.txt
golang_vm/uPIMulator/benchmark/HST-L/host/: app.c
golang_vm/uPIMulator/benchmark/HST-S/dpu/: CMakeLists.txt  task.c
golang_vm/uPIMulator/benchmark/HST-S/host/: app.c
golang_vm/uPIMulator/benchmark/MLP/dpu/: CMakeLists.txt
golang_vm/uPIMulator/benchmark/MLP/host/: app.c
golang_vm/uPIMulator/benchmark/RED/host/: app.c
golang_vm/uPIMulator/benchmark/SCAN-RSS/dpu/: CMakeLists.txt
golang_vm/uPIMulator/benchmark/SCAN-RSS/host/: app.c
golang_vm/uPIMulator/benchmark/SCAN-SSA/: Makefile
golang_vm/uPIMulator/benchmark/SCAN-SSA/dpu/: CMakeLists.txt  task.c
golang_vm/uPIMulator/benchmark/SCAN-SSA/host/: app.c
golang_vm/uPIMulator/benchmark/SEL/dpu/: task.c
golang_vm/uPIMulator/benchmark/SEL/host/: app.c
golang_vm/uPIMulator/benchmark/TRNS/baselines/gpu/: main.cpp
golang_vm/uPIMulator/benchmark/TRNS/host/: app.c
golang_vm/uPIMulator/benchmark/TS/host/: app.c
golang_vm/uPIMulator/benchmark/UNI/: Makefile
golang_vm/uPIMulator/benchmark/UNI/baselines/gpu/: ds.h
golang_vm/uPIMulator/benchmark/UNI/dpu/: CMakeLists.txt  task.c
golang_vm/uPIMulator/benchmark/UNI/host/: app.c
golang_vm/uPIMulator/benchmark/VA/: CMakeLists.txt  Makefile
golang_vm/uPIMulator/benchmark/VA/dpu/: CMakeLists.txt  task.c
golang_vm/uPIMulator/benchmark/VA/host/: CMakeLists.txt  app.c
golang_vm/uPIMulator/benchmark/VA_SIMPLE/: CMakeLists.txt
golang_vm/uPIMulator/benchmark/VA_SIMPLE/dpu/: CMakeLists.txt  task.c
golang_vm/uPIMulator/benchmark/VA_SIMPLE/host/: CMakeLists.txt  app.c
golang_vm/uPIMulator/script/: build.py  format.py
golang_vm/uPIMulator/sdk/syslib/: CMakeLists.txt  adddf3.c  addsf3.c  addvsi3.c  ashrdi3.c  atomic_bit.h  barrier.c  bswapsi2.c  clzdi2.c  cmpdi2.c  ctzdi2.c  defs.c  devprivate.h  divdf3.c  dpuruntime.h  ffssi2.c  ffsti2.c  fixsfdi.c  fixunsdfdi.c  fixunsdfsi.c  floatdisf.c  floatsisf.c  floatundidf.c  fp_add_impl.inc  fp_extend_impl.inc  fp_fixuint_impl.inc  fp_mul_impl.inc  fp_trunc.h  fp_trunc_impl.inc  handshake.c  handshake.h  int_math.h  int_util.h  listener.c  lshrdi3.c  moddi3.c  mul64.c  mulodi4.c  mulosi4.c  mutex.h  (+16 more)
golang_vm/uPIMulator/src/: main.go
python_cpp/: README.md
python_cpp/uPIMulator_backend/: CMakeLists.txt
python_cpp/uPIMulator_frontend/: requirements.txt
tools/upmem_profiler/: CMakeLists.txt
tools/upmem_profiler/script/: example.sh  (+6 more)
(+1147 files in other folders)
