cmake_minimum_required(VERSION 3.16)

project(benchmark)

add_subdirectory(BS)
add_subdirectory(GEMV)
add_subdirectory(HST-L)
add_subdirectory(HST-S)
add_subdirectory(MLP)
add_subdirectory(RED)
add_subdirectory(SCAN-RSS)
add_subdirectory(SCAN-SSA)
add_subdirectory(SEL)
add_subdirectory(TRNS)
add_subdirectory(TS)
add_subdirectory(UNI)
add_subdirectory(VA)
add_subdirectory(VA_SIMPLE)
